[HT-585] - Layout, design and responsive fixes: Landing page headers - All H2 in line with 'Getting started' on the topic landing page for weight and size Search bar - Padding on left is too small Menu bar - Keyline underneath all News - Anchor date and type to bottom of card on vertical small listing Feature image - Needs border - consistent across everywhere - Border light Content titles - need max-width 42em Content titles - More padding on bottom of titles on header bar Content header - Make the main title div area 100% for any pages not under a Topic Tags and last updated - Smaller gap between label and value Remove grey keyline on footer Table - Last p, remove margin. Table - Add border around whole table Share this - remove gradient, make it grey background On this page - Remove margin top

--- a/health/sass/_shame.scss
+++ b/health/sass/_shame.scss
@@ -309,7 +309,9 @@
 // site in a number of places and is a UIKit style.
 .node-type-health-topic,
 .node-type-health-topic-hp,
-.node-type-landing-page {
+.node-type-landing-page,
+td, th,
+.view {
   p:last-of-type {
     margin-bottom: 0;
   }
